<resources>

    <string name="app_name">屏幕旋转</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Screen Rotation</string>
    
    <string name="bt_lan">水　平</string>
    <string name="bt_por">垂　　直</string>
    <string name="bt_re_lan">水平反转</string>
    <string name="bt_re_por">垂直反转</string>
    <string name="bt_re">重置</string>
    
    <string name="bt_float_off">关闭悬浮插件</string>
    <string name="bt_float_on">开启悬浮插件</string>
    <string name="version">Copyright © 2008 SHENZHEN ELECTRON TECHNOLOGY CO.,LTD</string>

</resources>