<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/big_window_layout"
	android:layout_width="100dip"
	android:layout_height="200dip"
	android:orientation="vertical"
    >
    <Button 
        android:id="@+id/f_lan"
        android:layout_width="100dip"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_lan"
        />
    <Button 
        android:id="@+id/f_por"
        android:layout_width="100dip"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_por"
        />
    <Button 
        android:id="@+id/f_relan"
        android:layout_width="100dip"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_re_lan"
        />
    <Button 
        android:id="@+id/f_repor"
        android:layout_width="100dip"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_re_por"
        />
    <Button 
        android:id="@+id/back"
        android:layout_width="100dip"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:text="取消"
        />
</LinearLayout>